--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ install:
   - pip install -U Click
   - pip install -U numpy
   - pip install -U scipy
+  - pip install -U cython
   - pip install -U pandas
   - pip install -U scikit-learn
   - pip install -U numexpr
