--- a/.github/workflows/pythonpublish.yml
+++ b/.github/workflows/pythonpublish.yml
@@ -15,7 +15,7 @@ jobs:
         python-version: '3.x'
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip numpy
+        python -m pip install --upgrade pip numpy cython
         pip install setuptools wheel twine
     - name: Build and publish
       env:
