--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,8 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest] # remove mac tests
+        os: [ubuntu-latest]
+          #os: [ubuntu-latest, windows-latest, macos-latest] # remove mac tests
         # Latest pyOpenMS supports Python 3.10, and 3.11
         python-version: ["3.10", "3.11"]
     steps:
