fix setup.py and .toml
both are required because of cython, works locally now

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,7 +44,6 @@ dependencies = [
 pyprophet = "pyprophet.main:cli"
 
 [tool.setuptools]
-packages = ["pyprophet"]
+packages = { find = { exclude = ["ez_setup", "examples", "tests"] } }
 include-package-data = true
 zip-safe = false
-
