--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,8 +7,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest]
-          #os: [ubuntu-latest, windows-latest, macos-latest] # remove mac tests
+        os: [ubuntu-latest, windows-latest, macos-latest]
         # Requirements file generated with python=3.11 
         python-version: ["3.11"]
     steps:
