feat: Update numpy and polars dependencies in pyproject.toml
This commit updates the `numpy` dependency to version 1.26.4 (currently pyopenms needs <= 1.26.4) and adds a new dependency `polars` with version 1.28.1 to the `pyproject.toml` file.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,9 +26,10 @@ dependencies = [
     "duckdb",
     "duckdb-extensions",
     "duckdb-extension-sqlite-scanner",
-    "numpy >= 2.0",
+    "numpy >= 1.26.4",
     "scipy",
     "pandas >= 0.17",
+    "polars >= 1.28.1",
     "cython",
     "numexpr >= 2.10.1",
     "scikit-learn >= 0.17",
