--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,7 +41,8 @@ dependencies = [
     "seaborn",
     "tabulate",
     "pyarrow",
-    "pypdf"
+    "pypdf",
+    "psutil"
 ]
 
 # Optional dependencies 
