chore: Add Sphinx documentation configuration and update dependencies for documentation tools

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,6 +48,7 @@ dependencies = [
 # Optional dependencies 
 [project.optional-dependencies]
 testing = ["pytest", "pytest-regtest"]
+docs = ["sphinx", "sphinx-copybutton", "pydata_sphinx_theme", "sphinx-click"]
 
 # Define console entry points
 [project.scripts]
