refactor: add pyopenms to project dependencies

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,7 +42,8 @@ dependencies = [
     "tabulate",
     "pyarrow",
     "pypdf",
-    "psutil"
+    "psutil",
+    "pyopenms"
 ]
 
 # Optional dependencies 
