refactor: update XGBoost configuration by removing hyperparameters and standardizing parameters, change hyperopt to use sklearn randomized grid search

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,8 +34,7 @@ dependencies = [
     "cython",
     "numexpr >= 2.10.1",
     "scikit-learn >= 1.5",
-    "xgboost",
-    "hyperopt",
+    "xgboost >= 2.1.4",
     "statsmodels >= 0.8.0",
     "matplotlib",
     "seaborn",
