--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -2,11 +2,12 @@ version: 2
 build:
   os: ubuntu-22.04
   tools:
-    python: "3.9"
+    python: "3.10"
 sphinx:
   configuration: docs/conf.py
 python:
   install:
+    -requirements: requirements.txt
     - method: pip
       path: .
       extra_requirements:
