--- a/requirements.txt
+++ b/requirements.txt
@@ -33,6 +33,7 @@ docutils==0.21.2
     #   pydata-sphinx-theme
     #   sphinx
     #   sphinx-click
+    #   sphinx-rtd-theme
 duckdb==1.3.0
     # via
     #   duckdb-extension-sqlite-scanner
@@ -168,9 +169,13 @@ sphinx==7.4.7
     #   pyprophet (setup.py)
     #   sphinx-click
     #   sphinx-copybutton
+    #   sphinx-rtd-theme
+    #   sphinxcontrib-jquery
 sphinx-click==6.0.0
     # via pyprophet (setup.py)
 sphinx-copybutton==0.5.2
+    # via pyprophet (setup.py)
+sphinx-rtd-theme==3.0.2
     # via pyprophet (setup.py)
 sphinxcontrib-applehelp==2.0.0
     # via sphinx
@@ -178,6 +183,8 @@ sphinxcontrib-devhelp==2.0.0
     # via sphinx
 sphinxcontrib-htmlhelp==2.1.0
     # via sphinx
+sphinxcontrib-jquery==4.1
+    # via sphinx-rtd-theme
 sphinxcontrib-jsmath==1.0.1
     # via sphinx
 sphinxcontrib-qthelp==2.0.0
