--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ classifiers = [
     "Topic :: Scientific/Engineering :: Chemistry"
 ]
 keywords = ["bioinformatics", "openSWATH", "mass spectrometry"]
+requires-python = ">=3.10, <=3.13"
 
 # Dependencies required for runtime
 dependencies = [
