chore: add concurrency to CI workflow to cancel previous runs

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,6 +4,11 @@ on: [push]
 
 jobs:
   test:
+    # Add concurrency to cancel previous runs
+    concurrency:
+      group: ${{ github.workflow }}-${{ github.ref }}
+      cancel-in-progress: true
+
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
@@ -28,4 +33,4 @@ jobs:
 
     - name: Test
       run: |
-        python -m pytest -n auto tests/ 
+        python -m pytest -n auto tests/
