--- a/requirements.txt
+++ b/requirements.txt
@@ -67,6 +67,8 @@ kiwisolver==1.4.7
     # via matplotlib
 loguru==0.7.3
     # via pyprophet (setup.py)
+lxml==6.0.2
+    # via pyprophet (setup.py)
 markupsafe==3.0.2
     # via jinja2
 matplotlib==3.9.4
