fix: set OMP_NUM_THREADS to 1 for pytest execution in CI workflow

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,4 +35,4 @@ jobs:
 
     - name: Test
       run: |
-        python -m pytest -n auto tests/
+        OMP_NUM_THREADS=1 python -m pytest -n auto tests/
