fix: add 'packaging' to runtime dependencies in pyproject.toml

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,7 +44,8 @@ dependencies = [
     "pypdf",
     "psutil",
     "pyopenms",
-    "lxml"
+    "lxml",
+    "packaging"
 ]
 
 # Optional dependencies 
