--- a/.github/workflows/buildpackage.yml
+++ b/.github/workflows/buildpackage.yml
@@ -16,7 +16,7 @@ jobs:
           - os: ubuntu-22.04
             artifact_name: pyprophet-linux-x86_64
             build_script: bash scripts/build_linux.sh
-            archive_cmd: cd dist && tar -czf ../pyprophet-linux-x86_64.tar.gz pyprophet/
+            archive_cmd: echo "Archive created by build script"
             
           - os: windows-latest
             artifact_name: pyprophet-windows-x86_64
