--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,10 +15,16 @@ classifiers = [
     "Intended Audience :: Science/Research",
     "License :: OSI Approved :: BSD License",
     "Operating System :: OS Independent",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
+    "Programming Language :: Python :: 3.13",
     "Topic :: Scientific/Engineering :: Bio-Informatics",
     "Topic :: Scientific/Engineering :: Chemistry"
 ]
-keywords = ["bioinformatics", "openSWATH", "mass spectrometry"]
+keywords = ["bioinformatics", "OpenSWATH", "mass spectrometry"]
 requires-python = ">=3.9, <=3.13"
 
 # Dependencies required for runtime
@@ -48,12 +54,16 @@ dependencies = [
 [project.optional-dependencies]
 testing = ["pytest", "pytest-regtest", "pytest-xdist"]
 docs = ["sphinx", "sphinx-copybutton", "sphinx_rtd_theme", "pydata_sphinx_theme", "sphinx-click"]
+dev = ["pyprophet[testing]", "pyprophet[docs]", "black", "ruff", "mypy"]
 
 # Define console entry points
 [project.scripts]
 pyprophet = "pyprophet.main:cli"
 
 [tool.setuptools]
-packages = { find = { exclude = ["ez_setup", "examples", "tests"] } }
+packages = { find = { where = ["."], exclude = ["tests*", "docs*", "examples*", "scripts*", "packaging*"] } }
 include-package-data = true
 zip-safe = false
+
+[tool.setuptools.package-data]
+pyprophet = ["py.typed", "**/*.pyx", "**/*.pxd"]
