--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -25,7 +25,7 @@ jobs:
           - os: windows-latest
             artifact_name: pyprophet-windows-x86_64
             build_script: scripts/build/build_windows.bat
-            archive_cmd: cd dist && tar -czf ../pyprophet-windows-x86_64.tar.gz pyprophet/
+            archive_cmd: echo "Archive created by build script"
             
           - os: macos-13  # Intel Mac
             artifact_name: pyprophet-macos-x86_64
