--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -3,39 +3,21 @@ name: Build and Release
 on:
   push:
     tags:
-      - 'v*'  # Trigger on version tags like v3.0.3
-  workflow_dispatch:  # Allow manual trigger
+      - 'v*'
+  workflow_dispatch:
 
 concurrency:
-  group: ${{ github.workflow }}-${{ github.ref }}
-  cancel-in-progress: true
+  group: release-${{ github.ref }}
+  cancel-in-progress: false
 
 jobs:
   build:
     name: Build on ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
     strategy:
+      fail-fast: false
       matrix:
-        include:
-          - os: ubuntu-22.04
-            artifact_name: pyprophet-linux-x86_64
-            build_script: bash scripts/build/build_linux.sh
-            archive_cmd: echo "Archive created by build script"
-            
-          - os: windows-latest
-            artifact_name: pyprophet-windows-x86_64
-            build_script: scripts/build/build_windows.bat
-            archive_cmd: echo "Archive created by build script"
-            
-          - os: macos-13  # Intel Mac
-            artifact_name: pyprophet-macos-x86_64
-            build_script: bash scripts/build/build_macos.sh
-            archive_cmd: echo "Archive created by build script"
-            
-          - os: macos-latest  # Apple Silicon (M1/M2)
-            artifact_name: pyprophet-macos-arm64
-            build_script: bash scripts/build/build_macos.sh
-            archive_cmd: echo "Archive created by build script"
+        os: [ubuntu-22.04, windows-latest, macos-latest]
 
     steps:
       - name: Checkout code
@@ -57,19 +39,60 @@ jobs:
           python -m pip install --upgrade pip
           pip install -e .
 
-      - name: Build executable
-        run: ${{ matrix.build_script }}
+      - name: Build executable (Linux)
+        if: runner.os == 'Linux'
+        run: bash scripts/build/build_linux.sh
 
-      - name: Create archive
-        run: ${{ matrix.archive_cmd }}
+      - name: Build executable (Windows)
+        if: runner.os == 'Windows'
+        run: scripts/build/build_windows.bat
 
-      - name: Upload artifact
+      - name: Build executable (macOS)
+        if: runner.os == 'macOS'
+        run: bash scripts/build/build_macos.sh
+
+      - name: Verify artifacts (Linux/macOS)
+        if: runner.os != 'Windows'
+        run: |
+          echo "Listing artifacts in root directory:"
+          ls -lh pyprophet-*.tar.gz pyprophet-*.tar.gz.sha256 || echo "No .tar.gz files found"
+
+      - name: Verify artifacts (Windows)
+        if: runner.os == 'Windows'
+        run: |
+          echo "Listing artifacts in root directory:"
+          Get-ChildItem -Path . -Filter "pyprophet-*.zip" | Format-Table Name, Length
+          Get-ChildItem -Path . -Filter "pyprophet-*.zip.sha256" | Format-Table Name, Length
+        shell: pwsh
+
+      - name: Upload build artifacts (Linux)
+        if: runner.os == 'Linux'
         uses: actions/upload-artifact@v4
         with:
-          name: ${{ matrix.artifact_name }}
+          name: pyprophet-linux-x86_64
           path: |
-            dist/*.tar.gz
-            dist/*.zip
+            pyprophet-linux-*.tar.gz
+            pyprophet-linux-*.tar.gz.sha256
+          retention-days: 7
+
+      - name: Upload build artifacts (Windows)
+        if: runner.os == 'Windows'
+        uses: actions/upload-artifact@v4
+        with:
+          name: pyprophet-windows-x86_64
+          path: |
+            pyprophet-windows-*.zip
+            pyprophet-windows-*.zip.sha256
+          retention-days: 7
+
+      - name: Upload build artifacts (macOS)
+        if: runner.os == 'macOS'
+        uses: actions/upload-artifact@v4
+        with:
+          name: pyprophet-macos-${{ runner.arch }}
+          path: |
+            pyprophet-macos-*.tar.gz
+            pyprophet-macos-*.tar.gz.sha256
           retention-days: 7
 
   release:
@@ -91,7 +114,16 @@ jobs:
           path: artifacts
 
       - name: Display structure of downloaded files
-        run: ls -R artifacts
+        run: |
+          echo "Artifact directory structure:"
+          find artifacts -type f -ls
+
+      - name: Prepare release assets
+        run: |
+          mkdir -p release-assets
+          find artifacts -type f \( -name "*.tar.gz" -o -name "*.zip" -o -name "*.sha256" \) -exec cp {} release-assets/ \;
+          echo "Release assets:"
+          ls -lh release-assets/
 
       - name: Create Release
         uses: softprops/action-gh-release@v1
@@ -99,8 +131,6 @@ jobs:
           draft: false
           prerelease: false
           generate_release_notes: true
-          files: |
-            artifacts/**/*.tar.gz
-            artifacts/**/*.zip
+          files: release-assets/*
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
